--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,23 +9,25 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^14.1.0",
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/stack": "^7.4.7",
     "expo": "~53.0.20",
     "expo-constants": "^17.1.7",
+    "expo-linear-gradient": "^14.1.5",
     "expo-linking": "^7.1.7",
     "expo-router": "^5.1.4",
     "expo-status-bar": "~2.2.3",
     "nativewind": "^4.1.23",
     "react": "19.0.0",
+    "react-dom": "19.0.0",
     "react-native": "0.79.5",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
-    "tailwindcss": "^3.4.17",
-    "react-dom": "19.0.0",
-    "react-native-web": "^0.20.0"
+    "react-native-web": "^0.20.0",
+    "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
