--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -17,6 +17,7 @@ jobs:
         with:
           node-version: 20
           cache: 'npm'
+          cache-dependency-path: 'frontend/package-lock.json'
 
       - name: 📥 Install dependencies for Expo app
         working-directory: ./frontend
