--- a/backend/package.json
+++ b/backend/package.json
@@ -5,12 +5,17 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "seed:test-users": "node scripts/seed-test-users.js",
+    "dev:seed": "SEED_TEST_USERS=true nodemon server.js"
   },
   "dependencies": {
+    "@prisma/client": "^6.14.0",
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "path": "^0.12.7",
     "prisma": "^6.14.0"
   },
