--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/stack": "^7.4.7",
+    "axios": "^1.11.0",
     "expo": "~53.0.20",
     "expo-constants": "^17.1.7",
     "expo-linking": "^7.1.7",
