--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -25,9 +25,10 @@ jobs:
   
       - name: 🏗️ Build Expo web app
         working-directory: ./frontend
-        # env:
-        #     REACT_APP_API_BASE_URL: ${{ secrets.APP_URL }}
-        #     EXPO_PUBLIC_STRIPE_PUBLIC_KEY: ${{ secrets.STRIPE_PUB_KEY }}
+        env:
+          EXPO_PUBLIC_API_URL: ${{ secrets.EXPO_PUBLIC_API_URL }}
+          # REACT_APP_API_BASE_URL: ${{ secrets.APP_URL }}
+          # EXPO_PUBLIC_STRIPE_PUBLIC_KEY: ${{ secrets.STRIPE_PUB_KEY }}
         run: npm run build:web
   
       - name: 🔐 Set up SSH
