--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,6 @@
     "expo-linking": "^7.1.7",
     "expo-router": "^5.1.4",
     "expo-status-bar": "~2.2.3",
-    "nativewind": "^4.1.23",
     "prettier-plugin-tailwindcss": "^0.5.11",
     "react": "19.0.0",
     "react-dom": "19.0.0",
@@ -29,8 +28,7 @@
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "~4.11.1",
-    "react-native-web": "^0.20.0",
-    "tailwindcss": "^3.4.17"
+    "react-native-web": "^0.20.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
