--- a/frontend/app.json
+++ b/frontend/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "progress-frontend",
-    "slug": "progress-frontend",
+    "name": "Progress UK",
+    "slug": "progress-uk",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -24,7 +24,12 @@
     },
     "web": {
       "favicon": "./assets/favicon.png",
-      "bundler": "metro"
+      "bundler": "metro",
+      "name": "Progress UK - Unleashing Potential",
+      "shortName": "Progress UK",
+      "description": "Progress UK - A progressive political movement unleashing potential across the UK",
+      "themeColor": "#d946ef",
+      "backgroundColor": "#ffffff"
     }
   }
 }
