--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,16 +11,13 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
-    "@react-native-async-storage/async-storage": "^2.2.0",
-    "@react-navigation/native": "^7.1.6",
-    "@react-navigation/stack": "^7.4.7",
+    "@react-native-async-storage/async-storage": "2.1.2",
     "axios": "^1.11.0",
-    "expo": "~53.0.20",
+    "expo": "^53.0.0",
     "expo-constants": "^17.1.7",
     "expo-linking": "^7.1.7",
     "expo-router": "^5.1.4",
     "expo-status-bar": "~2.2.3",
-    "prettier-plugin-tailwindcss": "^0.5.11",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.5",
@@ -34,6 +31,13 @@
     "@babel/core": "^7.25.2",
     "@types/react": "~19.0.10",
     "typescript": "~5.8.3"
+  },
+  "expo": {
+    "doctor": {
+      "reactNativeDirectoryCheck": {
+        "listUnknownPackages": false
+      }
+    }
   },
   "private": true
 }
