--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-community/datetimepicker": "^8.4.4",
     "axios": "^1.11.0",
+    "date-fns": "^4.1.0",
     "expo": "^53.0.0",
     "expo-constants": "^17.1.7",
     "expo-linking": "^7.1.7",
