--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,7 +29,8 @@
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-web": "^0.20.0",
-    "react-time-picker": "^8.0.2"
+    "react-time-picker": "^8.0.2",
+    "expo-linear-gradient": "~14.1.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
