improved mobile api and UI changes

--- a/frontend/app.json
+++ b/frontend/app.json
@@ -30,6 +30,9 @@
       "description": "Progress UK - A progressive political movement unleashing potential across the UK",
       "themeColor": "#d946ef",
       "backgroundColor": "#ffffff"
-    }
+    },
+    "plugins": [
+      "expo-secure-store"
+    ]
   }
 }
