--- a/frontend/app.json
+++ b/frontend/app.json
@@ -28,7 +28,7 @@
       "name": "Progress UK - Unleashing Potential",
       "shortName": "Progress UK",
       "description": "Progress UK - A progressive political movement unleashing potential across the UK",
-      "themeColor": "#d946ef",
+      "themeColor": "transparent",
       "backgroundColor": "#ffffff"
     },
     "plugins": [
