--- a/frontend/app.json
+++ b/frontend/app.json
@@ -13,13 +13,23 @@
       "backgroundColor": "#ffffff"
     },
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "infoPlist": {
+        "NSSupportsLiveActivities": false,
+        "LSMinimumSystemVersion": "12.0",
+        "ITSAppUsesNonExemptEncryption": false,
+        "NSPhotoLibraryAddUsageDescription": "Progress UK needs access to save photos and PDFs to your photo library.",
+        "NSPhotoLibraryUsageDescription": "Progress UK needs access to your photo library to save and share content."
+      }
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
+      "permissions": [
+        "android.permission.CAMERA"
+      ],
       "edgeToEdgeEnabled": true
     },
     "web": {
@@ -31,7 +41,25 @@
       "backgroundColor": "#ffffff"
     },
     "plugins": [
-      "expo-secure-store"
-    ]
+      "expo-secure-store",
+      "expo-router",
+      [
+        "expo-notifications",
+        {
+          "icon": "./assets/favicon.png",
+          "color": "#ffffff",
+          "defaultChannel": "default",
+          "sounds": []
+        }
+      ]
+    ],
+    "extra": {
+      "privacyPolicyUrl": "https://www.advancedtutoring.uk/privacy-policy",
+      "termsOfServiceUrl": "https://www.advancedtutoring.uk/terms-of-service",
+      "eulaUrl": "https://www.apple.com/legal/internet-services/itunes/dev/stdeula/",
+      "eas": {
+        "projectId": "6de6f09c-f651-4f3f-9bb2-3501a6ce9534"
+      }
+    }
   }
 }
