--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,7 +31,9 @@
     "react-native-web": "^0.20.0",
     "react-time-picker": "^8.0.2",
     "expo-linear-gradient": "~14.1.5",
-    "expo-secure-store": "~14.2.3"
+    "expo-secure-store": "~14.2.3",
+    "expo-dev-client": "~5.2.4",
+    "expo-notifications": "~0.31.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
