--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,14 +12,23 @@
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
     "@react-native-async-storage/async-storage": "2.1.2",
-    "@react-native-community/datetimepicker": "^8.4.4",
+    "@react-native-community/datetimepicker": "8.4.1",
     "axios": "^1.11.0",
     "date-fns": "^4.1.0",
-    "expo": "^53.0.0",
+    "expo": "53.0.20",
     "expo-constants": "^17.1.7",
+    "expo-dev-client": "~5.2.4",
+    "expo-device": "^7.1.4",
+    "expo-font": "~13.3.2",
+    "expo-image": "^2.4.0",
+    "expo-image-picker": "^16.1.4",
+    "expo-linear-gradient": "~14.1.5",
     "expo-linking": "^7.1.7",
+    "expo-notifications": "~0.31.4",
     "expo-router": "^5.1.4",
+    "expo-secure-store": "~14.2.3",
     "expo-status-bar": "~2.2.3",
+    "expo-store-review": "^8.1.5",
     "react": "19.0.0",
     "react-datepicker": "^8.5.0",
     "react-dom": "19.0.0",
@@ -29,11 +38,7 @@
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-web": "^0.20.0",
-    "react-time-picker": "^8.0.2",
-    "expo-linear-gradient": "~14.1.5",
-    "expo-secure-store": "~14.2.3",
-    "expo-dev-client": "~5.2.4",
-    "expo-notifications": "~0.31.4"
+    "react-time-picker": "^8.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
