--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@expo/vector-icons": "^14.1.0",
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-community/datetimepicker": "8.4.1",
+    "@uiw/react-md-editor": "^4.0.8",
     "axios": "^1.11.0",
     "date-fns": "^4.1.0",
     "expo": "53.0.20",
@@ -32,13 +33,17 @@
     "react": "19.0.0",
     "react-datepicker": "^8.5.0",
     "react-dom": "19.0.0",
+    "react-markdown": "^10.1.0",
     "react-native": "0.79.5",
     "react-native-gesture-handler": "~2.24.0",
+    "react-native-markdown-display": "^7.0.2",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-web": "^0.20.0",
-    "react-time-picker": "^8.0.2"
+    "react-time-picker": "^8.0.2",
+    "remark": "^15.0.1",
+    "remark-gfm": "^4.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
