--- a/backend/package.json
+++ b/backend/package.json
@@ -19,7 +19,8 @@
     "jsonwebtoken": "^9.0.2",
     "node-cron": "^4.2.1",
     "path": "^0.12.7",
-    "prisma": "^6.14.0"
+    "prisma": "^6.14.0",
+    "stripe": "^18.5.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
