--- a/backend/package.json
+++ b/backend/package.json
@@ -14,13 +14,15 @@
     "@prisma/client": "^6.14.0",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
+    "discord.js": "^14.22.1",
     "dotenv": "^17.2.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "node-cron": "^4.2.1",
     "path": "^0.12.7",
     "prisma": "^6.14.0",
-    "stripe": "^18.5.0"
+    "stripe": "^18.5.0",
+    "resend": "^6.0.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
