updated with more role based access control

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -10,6 +10,13 @@ STRIPE_WEBHOOK_SECRET=whsec_your_stripe_webhook_secret
 DISCORD_BOT_TOKEN='your_discord_bot_token_here'
 DISCORD_GUILD_ID='your_discord_server_id_here'
 DISCORD_LINKED_ROLE_ID='your_linked_role_id_here'
+# Optional role mappings (leave unset to skip)
+DISCORD_ADMIN_ROLE_ID=''
+DISCORD_ONBOARDING_ROLE_ID=''
+DISCORD_EVENT_MANAGER_ROLE_ID=''
+DISCORD_WRITER_ROLE_ID=''
+DISCORD_VOLUNTEER_ROLE_ID=''
+DISCORD_MEMBER_ROLE_ID=''
 
 ## Resend Email Service
 RESEND_API_KEY='resend-api-key-here'
