--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@react-native-community/datetimepicker": "8.4.1",
     "axios": "^1.11.0",
     "date-fns": "^4.1.0",
+    "easymde": "^2.20.0",
     "expo": "53.0.20",
     "expo-constants": "^17.1.7",
     "expo-dev-client": "~5.2.4",
@@ -41,6 +42,7 @@
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-web": "^0.20.0",
+    "react-simplemde-editor": "^5.2.0",
     "react-time-picker": "^8.0.2"
   },
   "devDependencies": {
