policy stability improvements

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -26,3 +26,4 @@ RESEND_EMAIL='Progress Team <noreply@subdomainhere>'
 GITHUB_APP_ID=123456
 GITHUB_INSTALLATION_ID=12345678
 GITHUB_ORGANIZATION=your-org-name
+GITHUB_PRIVATE_KEY=''
