--- a/frontend/app.json
+++ b/frontend/app.json
@@ -66,7 +66,8 @@
       "eulaUrl": "https://www.apple.com/legal/internet-services/itunes/dev/stdeula/",
       "eas": {
         "projectId": "6de6f09c-f651-4f3f-9bb2-3501a6ce9534"
-      }
+      },
+      "cloudflareTurnstileSiteKey": "0x4AAAAAAB1SkeOzKj175cpI"
     }
   }
 }
