--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
+    "@marsidev/react-turnstile": "^1.3.0",
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-community/datetimepicker": "8.4.1",
     "axios": "^1.11.0",
@@ -36,14 +37,11 @@
     "react-dom": "19.0.0",
     "react-markdown": "^10.1.0",
     "react-native": "0.79.5",
-    "react-native-gesture-handler": "~2.24.0",
     "react-native-markdown-display": "^7.0.2",
-    "react-native-reanimated": "~3.17.4",
+    "react-native-reanimated": "^4.1.0",
     "react-native-safe-area-context": "^5.4.0",
-    "react-native-screens": "~4.11.1",
     "react-native-web": "^0.20.0",
-    "react-simplemde-editor": "^5.2.0",
-    "react-time-picker": "^8.0.2"
+    "react-simplemde-editor": "^5.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
