updated site key for produciton

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -27,3 +27,7 @@ GITHUB_APP_ID=123456
 GITHUB_INSTALLATION_ID=12345678
 GITHUB_ORGANIZATION=your-org-name
 GITHUB_PRIVATE_KEY=''
+
+# Cloudflare Turnstile (server-side verification)
+# Secret must start with 1x... (do NOT use the public 0x site key here)
+CLOUDFLARE_TURNSTILE_SECRET_KEY='1x________________________________'
