--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -3,7 +3,7 @@
     {
       "source": "/api/(.*)",
       "headers": [
-        { "key": "Access-Control-Allow-Origin", "value": "https://progress-web-hazel.vercel.app" },
+        { "key": "Access-Control-Allow-Origin", "value": "https://progressforbritain.org" },
         { "key": "Access-Control-Allow-Methods", "value": "GET, POST, OPTIONS" },
         { "key": "Access-Control-Allow-Headers", "value": "Content-Type, Authorization" },
         { "key": "Access-Control-Allow-Credentials", "value": "true" }
