--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,13 +1,7 @@
 {
-  "headers": [
-    {
-      "source": "/api/(.*)",
-      "headers": [
-        { "key": "Access-Control-Allow-Origin", "value": "https://progressforbritain.org" },
-        { "key": "Access-Control-Allow-Methods", "value": "GET, POST, OPTIONS" },
-        { "key": "Access-Control-Allow-Headers", "value": "Content-Type, Authorization" },
-        { "key": "Access-Control-Allow-Credentials", "value": "true" }
-      ]
+  "functions": {
+    "server.js": {
+      "maxDuration": 10
     }
-  ]
+  }
 }
