more meta tag updates

--- a/frontend/app.json
+++ b/frontend/app.json
@@ -36,6 +36,7 @@
     },
     "web": {
       "bundler": "metro",
+      "output": "static",
       "shortName": "",
       "description": "",
       "backgroundColor": "transparent"
