re-adding favicon

--- a/frontend/app.json
+++ b/frontend/app.json
@@ -37,6 +37,7 @@
     "web": {
       "bundler": "metro",
       "output": "static",
+      "favicon": "./assets/favicon.png",
       "shortName": "",
       "description": "",
       "backgroundColor": "transparent"
