--- a/frontend/assets/manifest.json
+++ b/frontend/assets/manifest.json
@@ -1,26 +1,20 @@
 {
   "name": "Progress UK",
-  "short_name": "Progress",
-  "description": "A political party beyond the left and right. Progress for the future",
+  "short_name": "ProgressUK",
+  "description": "Pragmatic, evidence-based policies and citizen engagement.",
+  "id": "/",
   "start_url": "/",
+  "scope": "/",
   "display": "standalone",
   "background_color": "#000000",
   "theme_color": "#6366f1",
   "orientation": "portrait-primary",
-  "categories": ["politics", "government", "news"],
   "lang": "en-GB",
+  "categories": ["politics", "government", "news"],
   "icons": [
-    {
-      "src": "/assets/favicon.png",
-      "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "any maskable"
-    },
-    {
-      "src": "/assets/icon.png", 
-      "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "any maskable"
-    }
+    { "src": "/assets/icon-192.png", "sizes": "192x192", "type": "image/png", "purpose": "any" },
+    { "src": "/assets/icon-192-maskable.png", "sizes": "192x192", "type": "image/png", "purpose": "maskable" },
+    { "src": "/assets/icon-512.png", "sizes": "512x512", "type": "image/png", "purpose": "any" },
+    { "src": "/assets/icon-512-maskable.png", "sizes": "512x512", "type": "image/png", "purpose": "maskable" }
   ]
 }
