added another favicon for manifest

--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -12,6 +12,7 @@
   "lang": "en-GB",
   "categories": ["politics", "government", "news"],
   "icons": [
-    { "src": "/favicon512x512.png", "sizes": "512x512", "type": "image/png", "purpose": "any maskable" }
+    { "src": "/favicon512x512.png", "sizes": "512x512", "type": "image/png", "purpose": "any maskable" },
+    { "src": "/favicon192x192.png", "sizes": "192x192", "type": "image/png", "purpose": "any" }
   ]
 }
